# rust-web

./: .env  Cargo.toml  README.md
error/: Cargo.toml
error/src/: error.rs
graphql-service/: Cargo.toml
graphql-service/src/: main.rs
graphql-service/src/gql/: mod.rs
graphql-service/src/gql/schema/: auth_user_schema.rs  member_schema.rs
rest-service/: Cargo.toml
rest-service/src/: main.rs
rest-service/src/controller/: auth_user_controller.rs  member_controller.rs  mod.rs  team_controller.rs  user_controller.rs
yugabyte/: Cargo.toml
yugabyte/src/: lib.rs
yugabyte/src/engine/: auth_user.rs  member.rs  team.rs  user.rs
yugabyte/src/model/: auth_user.rs  dto.rs  member.rs  team.rs  user.rs
yugabyte/src/util/: utils.rs
