[package]
name = "rest-controller"
version = "0.1.0"
authors = ["Abdelazizsaid250 <abdelazizsaid250@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
uuid = { version = "=0.8", features = ["serde", "v4"] }
dotenv = "0.15"
tracing-subscriber = "0.3.11"
yugabyte = { path = "../yugabyte" }
error = { path = "../error" }